--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
           "react-paginate": "^8.2.0",
           "react-redux": "^9.2.0",
           "react-router-dom": "^7.0.2",
+          "react-toastify": "^11.0.5",
           "redux-persist": "^6.0.0",
           "yup": "^1.5.0"
      },
