--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
           "@aws-sdk/client-s3": "^3.779.0",
           "@aws-sdk/lib-storage": "^3.782.0",
           "@headlessui/react": "^2.2.0",
+          "@heroicons/react": "^2.2.0",
           "@reduxjs/toolkit": "^2.5.0",
           "@tanstack/react-table": "^8.20.6",
           "clsx": "^2.1.1",
           "formik": "^2.4.6",
+          "libphonenumber-js": "^1.12.8",
           "moment": "^2.30.1",
           "react": "^18.3.1",
           "react-dom": "^18.3.1",
           "react-icons": "^5.4.0",
           "react-paginate": "^8.2.0",
+          "react-phone-number-input": "^3.4.12",
           "react-redux": "^9.2.0",
           "react-router-dom": "^7.0.2",
           "react-toastify": "^11.0.5",
